# flutter_rhwp

./: .pubignore  CHANGELOG.md  README.md  THIRD_PARTY_NOTICES.md  pubspec.yaml
android/: build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
docs/: 2026-05-24_ci_platform_verification.md  2026-05-24_example_file_workflows_and_web_editor.md  2026-05-24_flutter_rhwp_core_bridge.md  2026-05-24_flutter_widget_verification.md  2026-05-24_release_metadata_and_documentation.md  2026-05-25_android_ci_integration.md  2026-05-25_apple_cocoapods_rust_linkage.md  2026-05-25_cross_platform_full_editor_host.md  2026-05-25_docx_markdown_structure_export.md  2026-05-25_editor_caret_selection_overlay.md  2026-05-25_editor_layer_tree_geometry.md  2026-05-25_editor_multi_paragraph_selection.md  2026-05-25_example_asset_workflow_tests.md  2026-05-25_example_pdf_asset_workflow_test.md  2026-05-25_export_api_documentation.md  2026-05-25_export_artifact_metadata.md  2026-05-25_export_roundtrip_verification.md  2026-05-25_export_surface_completion.md  2026-05-25_flutter_native_editor_port_track.md  2026-05-25_frb_mock_bridge_smoke_test.md  2026-05-25_full_editor_surface.md  2026-05-25_ios_simulator_ci_integration.md  2026-05-25_linux_ci_headless_integration.md  2026-05-25_macos_ci_integration.md  2026-05-25_native_editor_character_formatting.md  2026-05-25_native_editor_character_shape_dialog.md  2026-05-25_native_editor_clipboard.md  2026-05-25_native_editor_context_menu.md  (+180 more)
example/: README.md  (+1 more)
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: rhwp.rs
(+78 files in other folders)
