[package]
name = "flutter_rhwp"
version = "2026.5.24"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
rhwp_core = { package = "rhwp", path = "vendor/rhwp", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
